HelloUltraviolet/Fixtures/RejectedSource/Expressions/WidenTypingDiagnosticsOwnership/Source/Main.uv
//! Rejected widen specimen for cast/transmute widen diagnostic ownership.

public procedure widenTypingDiagnosticsOwnershipReference() -> i32 {
    return widen 1
}
